fixed issue where AOS was not working properly on mobile

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -190,4 +190,17 @@
     color: #f1d3bb;
     font-weight: 600;
   }
+
+  #webDev_svg {
+    width: auto;
+    height: 300px;
+    margin-top: 20px!important;
+  }
+
+  #grey_blob {
+
+    position: absolute;
+    top: -250px!important;
+
+  }
 }
